facet-args/tests/snapshots/subcommand__missing_nested_subcommand_error.snap
---
source: facet-args/tests/subcommand.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::missing_subcommand

  × Could not parse CLI arguments
   ╭────
 1 │ ci 
   ╰────
  help: available subcommands:
          generate  Generate CI workflow files from Rust code
