facet-args/tests/snapshots/subcommand__missing_subcommand_error.snap
---
source: facet-args/tests/subcommand.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::missing_subcommand

  × Could not parse CLI arguments
  help: available subcommands:
          start  Start the service
          stop   Stop the service
