facet-args/tests/snapshots/subcommand__unknown_nested_subcommand_error.snap
---
source: facet-args/tests/subcommand.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::unknown_subcommand

  × Could not parse CLI arguments
   ╭────
 1 │ ci unknown 
   ·    ───┬───
   ·       ╰── unknown subcommand `unknown`
   ╰────
  help: available subcommands:
          generate  Generate CI workflow files from Rust code
