facet-args/tests/snapshots/subcommand__wrong_argument_style_for_nested_subcommand.snap
---
source: facet-args/tests/subcommand.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::reflect_error

  × Could not parse CLI arguments
   ╭────
 1 │ ci --action gen 
   ·             ─┬─
   ·              ╰── Subcommands must be provided as positional arguments, not as flag values. Use the subcommand name directly instead of --flag <value>.
   ╰────
